--- a/EC_Launcher/MainWindow.xaml
+++ b/EC_Launcher/MainWindow.xaml
@@ -5,14 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EC_Launcher"
         mc:Ignorable="d"
-        Title="Hearts of Iron IV: Economic Crisis Launcher" Height="450" Width="800" Activated="Window_Activated">
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        Title="Hearts of Iron IV: Economic Crisis Launcher" Height="500" Width="800" Activated="Window_Activated">
+
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="10" ResizeBorderThickness="5" />
+    </WindowChrome.WindowChrome>
 
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="Background.bmp"/>
         </Grid.Background>
 
-        <StackPanel HorizontalAlignment="Left" Height="185" Margin="10,71,0,0" VerticalAlignment="Top" Width="158">
+        <WebBrowser x:Name="WBrowser" HorizontalAlignment="Left" Height="275" Margin="232,71,0,0" VerticalAlignment="Top" Width="558"/>
+
+        <StackPanel HorizontalAlignment="Left" Height="186" Margin="10,140,0,0" VerticalAlignment="Top" Width="158">
             <StackPanel.Background>
                 <RadialGradientBrush>
                     <GradientStop Color="Black"/>
@@ -110,12 +118,10 @@
                 </Button.Foreground>
             </Button>
         </StackPanel>
-
-        <WebBrowser x:Name="WebBrowser1" HorizontalAlignment="Left" Height="264" Margin="291,42,0,0" VerticalAlignment="Top" Width="491"/>
-        <ProgressBar x:Name="ProgressBar1" HorizontalAlignment="Left" Height="19" Margin="10,289,0,0" VerticalAlignment="Top" Width="276"/>
+        <ProgressBar x:Name="ProgressBar1" HorizontalAlignment="Left" Height="20" Margin="10,358,0,0" VerticalAlignment="Top" Width="276"/>
         <TextBlock x:Name="PgBar_TextBlock" Visibility="Hidden" Text="{Binding ElementName=ProgressBar1, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="133,290,642,113" />
 
-        <Label x:Name="ModVersionLabel" Content="Mod Version: " HorizontalAlignment="Left" Margin="486,313,0,0" VerticalAlignment="Top" FontWeight="Bold" Background="{x:Null}">
+        <Label x:Name="ModVersionLabel" Content="Mod Version: " HorizontalAlignment="Left" Margin="333,358,0,0" VerticalAlignment="Top" FontWeight="Bold" Background="{x:Null}">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -123,7 +129,7 @@
                 </LinearGradientBrush>
             </Label.Foreground>
         </Label>
-        <Label x:Name="LauncherVersionLabel" Content="Launcher Version: " HorizontalAlignment="Left" Margin="624,313,0,0" VerticalAlignment="Top" FontWeight="Bold">
+        <Label x:Name="LauncherVersionLabel" Content="Launcher Version: " HorizontalAlignment="Left" Margin="536,358,0,0" VerticalAlignment="Top" FontWeight="Bold">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -131,8 +137,8 @@
                 </LinearGradientBrush>
             </Label.Foreground>
         </Label>
-        <Label x:Name="DeveloperMode_Label" Content="Developer Mode" HorizontalAlignment="Left" Margin="678,383,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="#FFF30000" FontWeight="Bold"/>
-        <Label Content="Follow us: " HorizontalAlignment="Left" Margin="10,313,0,0" VerticalAlignment="Top" FontWeight="Bold">
+        <Label x:Name="DeveloperMode_Label" Content="Developer Mode" HorizontalAlignment="Left" Margin="678,455,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="#FFF30000" FontWeight="Bold"/>
+        <Label Content="Follow us: " HorizontalAlignment="Left" Margin="10,382,0,0" VerticalAlignment="Top" FontWeight="Bold">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -142,7 +148,7 @@
         </Label>
 
         <!-- Social community buttons -->
-        <StackPanel HorizontalAlignment="Left" Height="30" Margin="80,308,0,0" VerticalAlignment="Top" Width="206" Orientation="Horizontal">
+        <StackPanel HorizontalAlignment="Left" Height="30" Margin="80,378,0,0" VerticalAlignment="Top" Width="206" Orientation="Horizontal">
             <Button x:Name="FacebookButton" Content="" Width="30" BorderBrush="{x:Null}" Height="30" VerticalAlignment="Top" Click="FacebookButton_Click">
                 <Button.Background>
                     <ImageBrush ImageSource="icons/facebook.png"/>
@@ -169,6 +175,31 @@
                 </Button.Background>
             </Button>
         </StackPanel>
+
+        <!-- Custom Top Bar -->
+        <Rectangle HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="800">
+            <Rectangle.Fill>
+                <ImageBrush ImageSource="icons/header_wide_bg.png"/>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Button x:Name="CloseButton" Content="" HorizontalAlignment="Left" Margin="745,0,0,0" VerticalAlignment="Top" Width="45" Height="29" BorderBrush="{x:Null}" Click="CloseButton_Click">
+            <Button.Background>
+                <ImageBrush ImageSource="icons/close_box_green.png"/>
+            </Button.Background>
+        </Button>
+        <Label Content="Hearts of Iron IV: Economic Crisis Launcher" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" FontFamily="Perpetua Titling MT">
+            <Label.Foreground>
+                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="1"/>
+                    <GradientStop Color="#FF913030"/>
+                </LinearGradientBrush>
+            </Label.Foreground>
+            <Label.Effect>
+                <DropShadowEffect Color="#FF0E0E0E" RenderingBias="Quality"/>
+            </Label.Effect>
+        </Label>
+        <Label Content="Created by SuxrobGM" HorizontalAlignment="Left" Margin="10,455,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
+        
 
     </Grid>
 </Window>
