--- a/EC_Launcher/MainWindow.xaml
+++ b/EC_Launcher/MainWindow.xaml
@@ -18,7 +18,11 @@
             <ImageBrush ImageSource="Background.bmp"/>
         </Grid.Background>
 
-        <WebBrowser x:Name="WBrowser" HorizontalAlignment="Left" Height="275" Margin="232,71,0,0" VerticalAlignment="Top" Width="558"/>
+        <WebBrowser x:Name="WBrowser" HorizontalAlignment="Left" Height="275" Margin="232,71,0,0" VerticalAlignment="Top" Width="558">
+            <WebBrowser.Effect>
+                <DropShadowEffect BlurRadius="50" Direction="100" RenderingBias="Quality" ShadowDepth="10"/>
+            </WebBrowser.Effect>
+        </WebBrowser>
 
         <StackPanel HorizontalAlignment="Left" Height="186" Margin="10,140,0,0" VerticalAlignment="Top" Width="158">
             <StackPanel.Background>
@@ -29,10 +33,16 @@
             </StackPanel.Background>
 
             <Button x:Name="OpenGameButton" Content="Open Game" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="28" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0" Click="OpenGameButton_Click">
+                <Button.Background>
+                    <RadialGradientBrush>
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="#FFFF9700"/>
+                    </RadialGradientBrush>
+                </Button.Background>
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFD8D8D8" Offset="1"/>
+                        <GradientStop Color="#FFFF8B00" Offset="1"/>
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Foreground>
@@ -44,10 +54,16 @@
             </Button>
 
             <Button x:Name="CheckUpdateButton" Content="Check Update" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="28" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0,3,0,0" Click="CheckUpdateButton_Click">
+                <Button.Background>
+                    <RadialGradientBrush>
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="#FFFF9700"/>
+                    </RadialGradientBrush>
+                </Button.Background>
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFD8D8D8" Offset="1"/>
+                        <GradientStop Color="#FFFF8B00" Offset="1"/>
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Foreground>
@@ -59,10 +75,16 @@
             </Button>
 
             <Button x:Name="ReportBugButton" Content="Report Bug" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="27" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0,3,0,0" Click="ReportBugButton_Click">
+                <Button.Background>
+                    <RadialGradientBrush>
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="#FFFF9700"/>
+                    </RadialGradientBrush>
+                </Button.Background>
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFD8D8D8" Offset="1"/>
+                        <GradientStop Color="#FFFF8B00" Offset="1"/>
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Foreground>
@@ -74,10 +96,16 @@
             </Button>
 
             <Button x:Name="DonateButton" Content="Donate!" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="28" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0,3,0,0">
+                <Button.Background>
+                    <RadialGradientBrush>
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="#FFFF9700"/>
+                    </RadialGradientBrush>
+                </Button.Background>
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFD8D8D8" Offset="1"/>
+                        <GradientStop Color="#FFFF8B00" Offset="1"/>
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Foreground>
@@ -89,10 +117,16 @@
             </Button>
 
             <Button x:Name="SettingsButton" Content="Settings" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="28" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0,3,0,0" Click="SettingsButton_Click">
+                <Button.Background>
+                    <RadialGradientBrush>
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="#FFFF9700"/>
+                    </RadialGradientBrush>
+                </Button.Background>
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFD8D8D8" Offset="1"/>
+                        <GradientStop Color="#FFFF8B00" Offset="1"/>
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Foreground>
@@ -104,10 +138,16 @@
             </Button>
 
             <Button x:Name="GenerateHashButton" Content="Generate Hash" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="27" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0,3,0,0" Click="GenerateHashButton_Click">
+                <Button.Background>
+                    <RadialGradientBrush>
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="#FFFF9700"/>
+                    </RadialGradientBrush>
+                </Button.Background>
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFD8D8D8" Offset="1"/>
+                        <GradientStop Color="#FFFF8B00" Offset="1"/>
                     </LinearGradientBrush>
                 </Button.BorderBrush>
                 <Button.Foreground>
@@ -178,11 +218,20 @@
 
         <!-- Custom Top Bar -->
         <Rectangle HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="800">
+            <Rectangle.Stroke>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="#FF003593" Offset="1"/>
+                </LinearGradientBrush>
+            </Rectangle.Stroke>
             <Rectangle.Fill>
-                <ImageBrush ImageSource="icons/header_wide_bg.png"/>
+                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
-        <Button x:Name="CloseButton" Content="" HorizontalAlignment="Left" Margin="745,0,0,0" VerticalAlignment="Top" Width="45" Height="29" BorderBrush="{x:Null}" Click="CloseButton_Click">
+        <Button x:Name="CloseButton" Content="" HorizontalAlignment="Left" Margin="758,0,0,0" VerticalAlignment="Top" Width="32" Height="32" BorderBrush="{x:Null}" Click="CloseButton_Click">
             <Button.Background>
                 <ImageBrush ImageSource="icons/cancel_button.png"/>
             </Button.Background>
@@ -191,15 +240,15 @@
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="1"/>
-                    <GradientStop Color="#FF913030"/>
+                    <GradientStop Color="#FF0097FF"/>
                 </LinearGradientBrush>
             </Label.Foreground>
             <Label.Effect>
                 <DropShadowEffect Color="#FF0E0E0E" RenderingBias="Quality"/>
             </Label.Effect>
         </Label>
-        <Label Content="Created by SuxrobGM" HorizontalAlignment="Left" Margin="10,455,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
-        
+        <Label Content="Developed by SuxrobGM" HorizontalAlignment="Left" Margin="10,455,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
+
 
     </Grid>
 </Window>
