added Custom Style

--- a/EC_Launcher/App.xaml
+++ b/EC_Launcher/App.xaml
@@ -3,5 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:EC_Launcher"
              StartupUri="MainWindow.xaml" Startup="Application_Startup">
-   
+    
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ButtonStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>    
+        </ResourceDictionary>
+    </Application.Resources>
+    
 </Application>
