--- a/EC_Launcher/MainWindow.xaml
+++ b/EC_Launcher/MainWindow.xaml
@@ -32,132 +32,72 @@
                 </RadialGradientBrush>
             </StackPanel.Background>
 
-            <Button x:Name="OpenGameButton" Content="Open Game" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="28" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0" Click="OpenGameButton_Click">
-                <Button.Background>
-                    <RadialGradientBrush>
-                        <GradientStop Color="Black" Offset="1"/>
-                        <GradientStop Color="#FFFF9700"/>
-                    </RadialGradientBrush>
-                </Button.Background>
-                <Button.BorderBrush>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFFF8B00" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.BorderBrush>
-                <Button.Foreground>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FF4F4BB0" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.Foreground>
-            </Button>
+            <Button 
+                x:Name="OpenGameButton"
+                Content="Open Game" 
+                Style="{StaticResource CustomButton}"                
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top" 
+                Width="158" 
+                Height="28"                 
+                Margin="0" 
+                Click="OpenGameButton_Click"/>
 
-            <Button x:Name="CheckUpdateButton" Content="Check Update" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="28" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0,3,0,0" Click="CheckUpdateButton_Click">
-                <Button.Background>
-                    <RadialGradientBrush>
-                        <GradientStop Color="Black" Offset="1"/>
-                        <GradientStop Color="#FFFF9700"/>
-                    </RadialGradientBrush>
-                </Button.Background>
-                <Button.BorderBrush>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFFF8B00" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.BorderBrush>
-                <Button.Foreground>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FF4F4BB0" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.Foreground>
-            </Button>
+            <Button 
+                x:Name="CheckUpdateButton" 
+                Content="Check Update" 
+                Style="{StaticResource CustomButton}" 
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top" 
+                Width="158" 
+                Height="28"                
+                Margin="0,3,0,0" 
+                Click="CheckUpdateButton_Click"/>
 
-            <Button x:Name="ReportBugButton" Content="Report Bug" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="27" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0,3,0,0" Click="ReportBugButton_Click">
-                <Button.Background>
-                    <RadialGradientBrush>
-                        <GradientStop Color="Black" Offset="1"/>
-                        <GradientStop Color="#FFFF9700"/>
-                    </RadialGradientBrush>
-                </Button.Background>
-                <Button.BorderBrush>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFFF8B00" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.BorderBrush>
-                <Button.Foreground>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FF4F4BB0" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.Foreground>
-            </Button>
+            <Button 
+                x:Name="ReportBugButton" 
+                Content="Report Bug" 
+                Style="{StaticResource CustomButton}"
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top" 
+                Width="158" 
+                Height="27"               
+                Margin="0,3,0,0" 
+                Click="ReportBugButton_Click"/>
 
-            <Button x:Name="DonateButton" Content="Donate!" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="28" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0,3,0,0">
-                <Button.Background>
-                    <RadialGradientBrush>
-                        <GradientStop Color="Black" Offset="1"/>
-                        <GradientStop Color="#FFFF9700"/>
-                    </RadialGradientBrush>
-                </Button.Background>
-                <Button.BorderBrush>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFFF8B00" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.BorderBrush>
-                <Button.Foreground>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FF4F4BB0" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.Foreground>
-            </Button>
+            <Button 
+                x:Name="DonateButton" 
+                Content="Donate!" 
+                Style="{StaticResource CustomButton}"
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top" 
+                Width="158" 
+                Height="28"                
+                Margin="0,3,0,0"/>
 
-            <Button x:Name="SettingsButton" Content="Settings" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="28" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0,3,0,0" Click="SettingsButton_Click">
-                <Button.Background>
-                    <RadialGradientBrush>
-                        <GradientStop Color="Black" Offset="1"/>
-                        <GradientStop Color="#FFFF9700"/>
-                    </RadialGradientBrush>
-                </Button.Background>
-                <Button.BorderBrush>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFFF8B00" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.BorderBrush>
-                <Button.Foreground>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FF4F4BB0" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.Foreground>
-            </Button>
+            <Button 
+                x:Name="SettingsButton" 
+                Content="Settings"
+                Style="{StaticResource CustomButton}"
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top" 
+                Width="158" 
+                Height="28" 
+                Margin="0,3,0,0" 
+                Click="SettingsButton_Click"/>
 
-            <Button x:Name="GenerateHashButton" Content="Generate Hash" HorizontalAlignment="Left" VerticalAlignment="Top" Width="158" Height="27" FontWeight="Bold" FontSize="14" FontFamily="Stencil" Margin="0,3,0,0" Click="GenerateHashButton_Click">
-                <Button.Background>
-                    <RadialGradientBrush>
-                        <GradientStop Color="Black" Offset="1"/>
-                        <GradientStop Color="#FFFF9700"/>
-                    </RadialGradientBrush>
-                </Button.Background>
-                <Button.BorderBrush>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FFFF8B00" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.BorderBrush>
-                <Button.Foreground>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="0"/>
-                        <GradientStop Color="#FF4F4BB0" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.Foreground>
-            </Button>
+            <Button 
+                x:Name="GenerateHashButton" 
+                Content="Generate Hash"
+                Style="{StaticResource CustomButton}"
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top" 
+                Width="158"
+                Height="27" 
+                Margin="0,3,0,0" 
+                Click="GenerateHashButton_Click"/>
         </StackPanel>
+        
         <ProgressBar x:Name="ProgressBar1" HorizontalAlignment="Left" Height="20" Margin="10,358,0,0" VerticalAlignment="Top" Width="222"/>
         <TextBlock x:Name="PgBar_TextBlock" Visibility="Hidden" Text="{Binding ElementName=ProgressBar1, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="133,290,642,113" />
 
