moved ButtonStyle.xaml to folder resources

--- a/EC_Launcher/App.xaml
+++ b/EC_Launcher/App.xaml
@@ -7,7 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="ButtonStyle.xaml"/>
+                <ResourceDictionary Source="resources/ButtonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>    
         </ResourceDictionary>
     </Application.Resources>
