--- a/EC_Launcher/SettingsWindow.xaml
+++ b/EC_Launcher/SettingsWindow.xaml
@@ -15,9 +15,9 @@
             </RadialGradientBrush>
         </Grid.Background>
         <Label Content="Game Directory:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="White"/>
-        <TextBox x:Name="GameDir_TBox" HorizontalAlignment="Left" Height="27" Margin="10,36,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" IsHitTestVisible="True" IsEnabled="False"/>
+        <TextBox x:Name="GameDir_TBox" HorizontalAlignment="Left" Height="27" Margin="10,36,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" IsHitTestVisible="True" IsEnabled="False" FontSize="10" FontWeight="Bold"/>
         <Label Content="Mod Directory:" HorizontalAlignment="Left" Margin="10,68,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="White"/>
-        <TextBox x:Name="ModDir_TBox" HorizontalAlignment="Left" Height="27" Margin="10,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" IsEnabled="False"/>
+        <TextBox x:Name="ModDir_TBox" HorizontalAlignment="Left" Height="27" Margin="10,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" IsEnabled="False" FontSize="10" FontWeight="Bold"/>
         <ComboBox x:Name="Language_CBox" HorizontalAlignment="Left" Margin="10,175,0,0" VerticalAlignment="Top" Width="123" SelectionChanged="Language_CBox_SelectionChanged">
             <ListBoxItem Content="English"/>
             <ListBoxItem Content="Russian"/>
