added Button Style static resource

--- a/EC_Launcher/App.xaml
+++ b/EC_Launcher/App.xaml
@@ -8,6 +8,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="resources/ButtonStyle.xaml"/>
+                <ResourceDictionary Source="resources/ButtonBackgroundImage.xaml"/>
             </ResourceDictionary.MergedDictionaries>    
         </ResourceDictionary>
     </Application.Resources>
