--- a/EC_Launcher/MainWindow.xaml
+++ b/EC_Launcher/MainWindow.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         WindowStyle="None"
         ResizeMode="NoResize"
-        Title="Hearts of Iron IV: Economic Crisis Launcher" Height="500" Width="800">
+        Title="Hearts of Iron IV: Economic Crisis Launcher" 
+        Height="500" 
+        Width="800">
 
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="26" ResizeBorderThickness="5" />
@@ -129,7 +131,14 @@
 
         <!-- Social community buttons -->
         <StackPanel HorizontalAlignment="Left" Height="30" Margin="80,382,0,0" VerticalAlignment="Top" Width="206" Orientation="Horizontal">
-            <Button x:Name="FacebookButton" Content="" Width="30" Height="30" VerticalAlignment="Top" Click="FacebookButton_Click">
+            <Button 
+                x:Name="FacebookButton"
+                Style="{StaticResource ButtonBackgroundImageShow}"
+                Content="" 
+                Width="30" 
+                Height="30" 
+                VerticalAlignment="Top" 
+                Click="FacebookButton_Click">
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
@@ -140,7 +149,12 @@
                     <ImageBrush ImageSource="icons/facebook-black.png"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="VKButton" Content="" Width="30" Click="VKButton_Click">
+            <Button 
+                x:Name="VKButton"
+                Style="{StaticResource ButtonBackgroundImageShow}"
+                Content="" 
+                Width="30" 
+                Click="VKButton_Click">
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
@@ -151,7 +165,12 @@
                     <ImageBrush ImageSource="icons/vk-black.png"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="YouTubeButton" Content="" Width="30" Click="YouTubeButton_Click">
+            <Button 
+                x:Name="YouTubeButton"
+                Style="{StaticResource ButtonBackgroundImageShow}"
+                Content="" 
+                Width="30" 
+                Click="YouTubeButton_Click">
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
@@ -162,7 +181,13 @@
                     <ImageBrush ImageSource="icons/youtube-black.png"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="DiscordButton" Content="" Width="30" Click="DiscordButton_Click" IsTabStop="False">
+            <Button 
+                x:Name="DiscordButton"
+                Style="{StaticResource ButtonBackgroundImageShow}"
+                Content="" 
+                Width="30" 
+                Click="DiscordButton_Click" 
+                IsTabStop="False">
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
@@ -173,7 +198,12 @@
                     <ImageBrush ImageSource="icons/discord-black.png"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="SteamButton" Content="" Width="30" Click="SteamButton_Click">
+            <Button 
+                x:Name="SteamButton"
+                Style="{StaticResource ButtonBackgroundImageShow}"
+                Content="" 
+                Width="30" 
+                Click="SteamButton_Click">
                 <Button.BorderBrush>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
@@ -201,7 +231,17 @@
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
-        <Button x:Name="CloseButton" Content="" HorizontalAlignment="Left" Margin="758,30,0,0" VerticalAlignment="Top" Width="32" Height="32" BorderBrush="{x:Null}" Click="CloseButton_Click">
+        <Button 
+            x:Name="CloseButton"
+            Style="{StaticResource ButtonBackgroundImageShow}"
+            Content="" 
+            HorizontalAlignment="Left" 
+            Margin="758,30,0,0" 
+            VerticalAlignment="Top" 
+            Width="32" 
+            Height="32" 
+            BorderBrush="{x:Null}" 
+            Click="CloseButton_Click">
             <Button.Background>
                 <ImageBrush ImageSource="icons/cancel_button.png"/>
             </Button.Background>
@@ -218,7 +258,7 @@
             </Label.Effect>
         </Label>
         <Label Content="Developed by SuxrobGM" HorizontalAlignment="Left" Margin="10,455,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
-        <TextBox Text="{Binding ElementName=ProgressBar1, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Left" Height="23" Margin="96,355,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="46" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        <TextBlock Text="{Binding ElementName=ProgressBar1, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Left" Height="23" Margin="96,355,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="46" Background="{x:Null}" FontWeight="Bold" FontStyle="Italic"/>
 
 
     </Grid>
