Big commit: added Russian localisation, added Application Auto Update functionality, added multi-thread Hash Generator

--- a/EC_Launcher/App.xaml
+++ b/EC_Launcher/App.xaml
@@ -9,6 +9,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="resources/ButtonStyle.xaml"/>
                 <ResourceDictionary Source="resources/ButtonBackgroundImage.xaml"/>
+                <ResourceDictionary Source="resources/lang.xaml"/>
             </ResourceDictionary.MergedDictionaries>    
         </ResourceDictionary>
     </Application.Resources>
