--- a/EC_Launcher/MainWindow.xaml
+++ b/EC_Launcher/MainWindow.xaml
@@ -36,7 +36,7 @@
 
             <Button 
                 x:Name="OpenGameButton"
-                Content="Open Game" 
+                Content="{DynamicResource m_OpenGame}"
                 Style="{StaticResource CustomButton}"                
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
@@ -47,7 +47,7 @@
 
             <Button 
                 x:Name="CheckUpdateButton" 
-                Content="Check Update" 
+                Content="{DynamicResource m_CheckUpdate}" 
                 Style="{StaticResource CustomButton}" 
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
@@ -58,7 +58,7 @@
 
             <Button 
                 x:Name="ReportBugButton" 
-                Content="Report Bug" 
+                Content="{DynamicResource m_CheckUpdate}" 
                 Style="{StaticResource CustomButton}"
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
@@ -69,7 +69,7 @@
 
             <Button 
                 x:Name="DonateButton" 
-                Content="Donate!" 
+                Content="{DynamicResource m_Donate}" 
                 Style="{StaticResource CustomButton}"
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
@@ -79,7 +79,7 @@
 
             <Button 
                 x:Name="SettingsButton" 
-                Content="Settings"
+                Content="{DynamicResource m_Settings}"
                 Style="{StaticResource CustomButton}"
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
@@ -90,7 +90,7 @@
 
             <Button 
                 x:Name="GenerateHashButton" 
-                Content="Generate Hash"
+                Content="{DynamicResource m_GenerateHash}"
                 Style="{StaticResource CustomButton}"
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
@@ -103,7 +103,7 @@
         <ProgressBar x:Name="ProgressBar1" x:FieldModifier="public" HorizontalAlignment="Left" Height="23" Margin="10,355,0,0" VerticalAlignment="Top" Width="222" ValueChanged="ProgressBar1_ValueChanged"/>
         <TextBlock x:Name="PgBar_TextBlock" Visibility="Hidden" Text="{Binding ElementName=ProgressBar1, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="133,290,642,113" />
 
-        <Label x:Name="ModVersionLabel" Content="Mod Version: " HorizontalAlignment="Left" Margin="291,358,0,0" VerticalAlignment="Top" FontWeight="Bold" Background="{x:Null}">
+        <Label x:Name="ModVersionLabel" Content="{DynamicResource m_ModVersionLabel}" HorizontalAlignment="Left" Margin="291,358,0,0" VerticalAlignment="Top" FontWeight="Bold" Background="{x:Null}">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -111,7 +111,7 @@
                 </LinearGradientBrush>
             </Label.Foreground>
         </Label>
-        <Label x:Name="LauncherVersionLabel" Content="Launcher Version: " HorizontalAlignment="Left" Margin="536,358,0,0" VerticalAlignment="Top" FontWeight="Bold">
+        <Label x:Name="LauncherVersionLabel" Content="{DynamicResource m_LauncherVersionLabel}" HorizontalAlignment="Left" Margin="536,358,0,0" VerticalAlignment="Top" FontWeight="Bold">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -119,8 +119,8 @@
                 </LinearGradientBrush>
             </Label.Foreground>
         </Label>
-        <Label x:Name="DeveloperMode_Label" Content="Developer Mode" HorizontalAlignment="Left" Margin="678,455,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="#FFF30000" FontWeight="Bold"/>
-        <Label Content="Follow us: " HorizontalAlignment="Left" Margin="10,386,0,0" VerticalAlignment="Top" FontWeight="Bold">
+        <Label x:Name="DeveloperMode_Label" Content="{DynamicResource m_DevMode}" HorizontalAlignment="Left" Margin="678,455,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="#FFF30000" FontWeight="Bold"/>
+        <Label Content="{DynamicResource m_FollowUsLabel}" HorizontalAlignment="Left" Margin="10,386,0,0" VerticalAlignment="Top" FontWeight="Bold">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -257,9 +257,9 @@
                 <DropShadowEffect Color="#FF0E0E0E" RenderingBias="Quality"/>
             </Label.Effect>
         </Label>
-        <Label Content="Developed by SuxrobGM" HorizontalAlignment="Left" Margin="10,455,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
+        <Label Content="{DynamicResource m_Author}" HorizontalAlignment="Left" Margin="10,455,0,0" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
         <TextBlock Text="{Binding ElementName=ProgressBar1, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Left" Height="23" Margin="108,355,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="46" Background="{x:Null}" FontWeight="Bold" FontStyle="Italic"/>
-        <TextBlock x:Name="statusText" HorizontalAlignment="Left" Margin="80,334,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
+        <TextBlock x:Name="statusText" HorizontalAlignment="Left" Margin="64,334,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontStyle="Italic"/>
 
 
     </Grid>
