--- a/EC_Launcher/resources/ButtonStyle.xaml
+++ b/EC_Launcher/resources/ButtonStyle.xaml
@@ -3,10 +3,10 @@
                     xmlns:local="clr-namespace:EC_Launcher">
     
     <!-- Custom Styles -->
-    <RadialGradientBrush x:Key="RadialGradientBrush">
-        <GradientStop Color="Black" Offset="1"/>
-        <GradientStop Color="#FFFF9700"/>
-    </RadialGradientBrush>
+    <LinearGradientBrush x:Key="LinearGradient" EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+        <GradientStop Color="#FFE8E8E8" Offset="1"/>
+        <GradientStop Color="#FF7A430B" Offset="0.4"/>
+    </LinearGradientBrush>
 
     <LinearGradientBrush x:Key="YellowLinearGradientBrush" EndPoint="0.5,1" StartPoint="0.5,0">
         <GradientStop Color="Black" Offset="0"/>
@@ -19,7 +19,7 @@
     </LinearGradientBrush>
 
     <Style x:Key="CustomButton" TargetType ="Button">
-        <Setter Property="Background" Value ="{StaticResource RadialGradientBrush}"/>
+        <Setter Property="Background" Value ="{StaticResource LinearGradient}"/>
         <Setter Property="BorderBrush" Value="{StaticResource YellowLinearGradientBrush}"/>
         <Setter Property="Foreground" Value="{StaticResource BlueLinearGradientBrush}"/>
         <Setter Property="FontFamily" Value="Stencil"/>
