--- a/EC_Launcher/resources/lang.xaml
+++ b/EC_Launcher/resources/lang.xaml
@@ -26,4 +26,30 @@
     <v:String x:Key="m_SendButton">Send</v:String>
 
     <!--Donate Window-->
+    
+    <!--Message Box Texts-->
+    <v:String x:Key="m_ERROR">ERROR</v:String>
+    <v:String x:Key="m_InvalidGamePath">Please set right directory of game in the settings</v:String>
+    <v:String x:Key="m_AvailableModUpdateCaption">Available update for mod!</v:String>
+    <v:String x:Key="m_AvailableAppUpdateCaption">Available update for launcher!</v:String>
+    <v:String x:Key="m_NoAppUpdateCaption">No update for launcher</v:String>
+    <v:String x:Key="m_NoModUpdateCaption">No update for mod</v:String>
+    <v:String x:Key="m_NoAppUpdateText">You are using the last version of launcher</v:String>
+    <v:String x:Key="m_NoModUpdateText">You are using the last version of mod</v:String>
+    <v:String x:Key="m_AvailableModUpdateText">Available update for mod. New version is</v:String>
+    <v:String x:Key="m_AvailableAppUpdateText">Available update for launcher. New version is</v:String>
+    <v:String x:Key="m_DownloadChooseOptionText">Do you want to download the update?</v:String>
+    <v:String x:Key="m_SetNameText">Please set your name</v:String>
+    <v:String x:Key="m_SetDescText">Please write about bug</v:String>
+    <v:String x:Key="m_MessageSuccessfullySentText">Your message was successfully sent to suxrobGM@gmail.com \nThanks for reported bug, we will fix it soon ;)</v:String>
+    <v:String x:Key="m_NetworkErrorText">Network connection error, please check the network connection</v:String>
+    
+    <!--Progress Bar Status Texts-->
+    <v:String x:Key="m_UpdatingLauncher">Updating EC_Launcher.exe ...</v:String>
+    <v:String x:Key="m_UpdatingMod">Updating mod...</v:String>
+    <v:String x:Key="m_GeneratingHash">Generating hash file...</v:String>
+    
+    <!--Dialog Description-->
+    <v:String x:Key="m_SetModDirDesc">Please set the correct path of the mod</v:String>
+    <v:String x:Key="m_SetGameDirDesc">Please set the correct path of the game</v:String>
 </ResourceDictionary>
