--- a/EC_Launcher/resources/lang.ru-RU.xaml
+++ b/EC_Launcher/resources/lang.ru-RU.xaml
@@ -14,11 +14,13 @@
     <v:String x:Key="m_LauncherVersionLabel">Версия лаунчера:</v:String>
     <v:String x:Key="m_Author">Автор: SuxrobGM</v:String>
     <v:String x:Key="m_DevMode">Режим разработчика</v:String>
+    <v:String x:Key="m_HaveNotSteamVersion">У вас нет steam версии оригинальной игры</v:String>
 
     <!--Settings Window-->
     <v:String x:Key="m_GameDirLabel">Путь к игре:</v:String>
     <v:String x:Key="m_ModDirLabel">Путь к моде:</v:String>
     <v:String x:Key="m_LanguageLabel">Язык приложения:</v:String>
+    <v:String x:Key="m_SteamVersionChkBox">Steam версия (ванилла)</v:String>
 
     <!--Report Bug Window-->
     <v:String x:Key="m_YourNameLabel">Ваше имя:</v:String>
